# vfs

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yaml
include/falltergeist/: vfs.h
include/falltergeist/vfs/: DatArchiveDriver.h  IFile.h  MemoryDriver.h  NativeFile.h  VFS.h  vfs.h
src/: DatArchiveDriver.cpp  DatArchiveDriver.h  DatArchiveFile.cpp  DatArchiveFile.h  DatArchiveStreamWrapper.cpp  IDriver.h  MemoryDriver.cpp  MemoryDriver.h  MemoryFile.cpp  MemoryFile.h  NativeDriver.cpp  NativeDriver.h  NativeFile.cpp  NativeFile.h  VFS.cpp  VFS.h
